# AutoMLEngineer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
outputs/: Titanic-Dataset_best_model.pkl  Titanic-Dataset_results.json  WA_Fn-UseC_-Telco-Customer-Churn_best_model.pkl  WA_Fn-UseC_-Telco-Customer-Churn_results.json  regression_results.json  results.json
src/: main.py  test_graph.py
src/agents/: dataset_analyst.py  explainability_agent.py  model_selector.py  model_trainer.py  report_generator.py
src/ml/: analyzer.py  confusion_matrix_report.py  consultant_agent.py  cross_validator.py  data_cleaner.py  explainability.py  feature_engineer.py  feature_filter.py  feature_importance.py  features_classifier.py  model_evaluater.py  model_selector.py  model_trainer.py  model_tuner.py  pipeline_builder.py  preprocessor_builder.py  problem_detector.py  regression_evaluator.py  report_generator.py  result_exporter.py  target_detector.py
src/tools/: dataset_tools.py  explainability_tools.py  model_selection_tools.py  training_tools.py
src/workflows/: automl_graph.py  state.py
